<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="LoginViewModel"
            type="com.example.bookroom.login.LoginViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vector_445">

                <ImageButton
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/mainColor"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_header_login"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/logo_ttc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-50dp"
                android:src="@drawable/logo_ttc_1">

            </ImageView>

            <RelativeLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo_ttc"
                android:layout_marginTop="58dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/shape_btn_email_pass"
                    android:gravity="center_vertical"
                    android:text="@={LoginViewModel.EmailAddress}"
                    android:hint="@string/hint_email"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login"
                    android:textSize="16sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/etEmail"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/shape_btn_email_pass"
                    android:gravity="center_vertical"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_pass"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={LoginViewModel.Password}"
                        android:paddingLeft="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/login"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/btn_quenMatKhau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutPass"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/quen_mat_khau"
                    android:textColor="@color/mainColor"
                    android:textSize="16dp"/>
                <Button

                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/btn_quenMatKhau"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:height="50dp"
                    android:onClick="@{(v) -> LoginViewModel.onClick(v)}"
                    android:background="@drawable/shape_btn_login"
                    android:text="@string/dang_nhap"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold">

                </Button>
                <Button

                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/btn_login"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:height="50dp"
                    android:background="@drawable/shape_btn_register"
                    android:text="@string/dang_ki"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
            </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</layout>

